<resources>
    <string name="app_name">Kalkulator</string>
    <string name="action_settings">Settings</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="bksp">Bksp</string>
    <string name="c">C</string>
    <string name="plusminus">±</string>
    <string name="dzielenie">/</string>
    <string name="mnozenie">*</string>
    <string name="minus">-</string>
    <string name="kropka">.</string>
    <string name="rowna">=</string>
    <string name="plus">+</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="advance">Advance</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="in">In</string>
    <string name="sqrt">Sqrt</string>
    <string name="x_2">X^2</string>
    <string name="x_y">x^y</string>
    <string name="log">log</string>
    <string name="normal">normal</string>
    <string name="Normal" />
    <string name="procent">%</string>
</resources>
